# auto-clicker

./: Cargo.toml
src/: app_state.rs  gui.rs  gui.xml  main.rs  mouse.rs
src/gui/: app_button.rs  gui.xml  mod.rs
src/mouse/: mod.rs
src/state/: mod.rs
