[package]
name = "auto-clicker"
version = "0.1.0"
authors = ["bnau <naubertrand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "0.7.0"
features = ["v3_22"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.enigo]
version = "0.0.13"